--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,6 @@
+#conda env create -f environment.yml
+#source activate qtc-env
+
 name: qtc-env
 
 channels:
@@ -18,3 +21,4 @@ dependencies:
     - pacchem::mess
     - pacchem::pac99
     - pacchem::thermp
+    - pacchem::rcdriver
